--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,48 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.33</version> <!-- Asegúrate de que esta es la última versión -->
         </dependency>
+
+        <!-- Spring Boot Starter Parent -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-parent</artifactId>
+            <version>3.1.1</version> <!-- Cambia a la última versión si es necesario -->
+            <scope>import</scope>
+            <type>pom</type>
+        </dependency>
+
+        <!-- Spring Boot Starter Web (para APIs y controladores web) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>3.1.1</version>
+        </dependency>
+
+        <!-- Spring Boot Starter Data JPA (para interactuar con bases de datos) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>3.1.1</version>
+        </dependency>
+
+        <!-- Spring Boot Starter Test (para realizar pruebas) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>3.1.1</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>3.1.1</version>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
