--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
             <type>pom</type>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20240303</version>
+        </dependency>
+
         <!-- Spring Boot Starter Web (para APIs y controladores web) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
