Created RunnerApplication and added new dependencies to pom.xml. Commands added to application.properties to enable to shut down API with command.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 
 spring.data.mongodb.uri: mongodb+srv://nttprobandoapi:Cartuja2024@cluster0.b9wtp.mongodb.net/variables_entorno?retryWrites=true&w=majority&appName=Cluster0;
+management.endpoint.shutdown.enabled=true
+management.endpoints.web.exposure.include=shutdown
