--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
             <version>3.1.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+            <version>3.1.1</version>
+        </dependency>
 
         <dependency>
             <groupId>jakarta.validation</groupId>
